css/header.less
div#header {
    position: fixed;
    right: 0;
    left: 0;
    z-index: 1030;
    margin-bottom: 0;
    height: 60px;

    .transition(1s  cubic-bezier(0.68, -0.3, 0.265, 1.3));

    background: #2e2c2a; /* Old browsers */
    background: -moz-linear-gradient(top,  #111010 0%, #2e2c2a 77%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#111010), color-stop(77%,#2e2c2a)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  #111010 0%,#2e2c2a 77%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  #111010 0%,#2e2c2a 77%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  #111010 0%,#2e2c2a 77%); /* IE10+ */
    background: linear-gradient(to bottom,  #111010 0%,#2e2c2a 77%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111010', endColorstr='#2e2c2a',GradientType=0 ); /* IE6-9 */

    color: #E6E6E6;

    &.open {

       top: -30px;
    }

    height: 390px;
    top: -340px;
}

div.header-background {
    background: #2e2c2a;
    position: absolute;
    height: 60px;
    width: 100%;
    /* opacity: 0; */
    
    -webkit-transition: 0.3s opacity;
       -moz-transition: 0.3s opacity;
            transition: 0.3s opacity;
}

.logo-background {
    border-bottom-left-radius: 50%;
    border-bottom-right-radius: 50%;
    background: #2e2c2a;
    margin: 0 auto;
    width: 56px;
    height: 56px;
    padding: 10px;

    position: absolute;
    bottom: -28px;
    left: 50%;
    margin-left: -38px;
}

div.header-content {
    /* max-width: 900px; */
    height: 100%;
}

div.header-content > div.header-name {
    color: #E6E6E6;
    position: absolute;
    left: 0;
    top: 15px;
    font-size: 25px;
    padding-left: 50px;
}

.header-logo {
    margin: 0 50%;
    width: 1px;
    height: 52px;
    padding: 10px 0;
    /* overflow: hidden; */

    position: absolute;
    bottom: -28px;
    
    -webkit-transition: 2s all;
       -moz-transition: 2s all;
         -o-transition: 2s all;
            transition: 2s all;
    
    cursor: pointer;
}

/* Style overrides */

.header-logo .logo {
    background: url('/img/default-logo.png');
    margin-left: -26px;
    width: 55px;
    height: 52px;
}

#header.minecraft-style .logo {
    background: url('/img/minecraft/logo.png');
    margin-left: -24px;
    width: 48px;
    height: 48px;
}

// If the header opens, turn off opacity always, regardless
// of what underlying element says otherwise
#header.open .header-background {
    opacity: 1 !important; // TODO: Not !important. Think about it more...
}

#header.home-style {
    .header-background {
        height: 100vh;
    }

    #mmm-hamburgers {
        display: none;
    }
}

// TODO: Let transparent work for any style, not just MC
#header.transparent.closed, #header.transparent.closed .logo-background {
    background: none;
}

#header {

    &.live-style {
        // Unfix the header to scroll with content
        position: absolute;

        // When closed, hide backgrounds. Uses the same rules as
        // transparent (which should honestly be a class applied to minecraft-style,
        // if we can get it to stick...)
        &.closed {
            background: none;
            
            .logo-background {
                background: none;
            }

            // Hide logo as well
            .header-logo {
                display: none;
            }
        }
    }
}

/* TODO: Removing for now, it looks pretty weird. Maybe there's an alternative?

#header.open {
    // If the header opens, stick a white border around our avatar
    // to match the other icons
    .header-content .pages img.avatar {
        border: 2px solid #FFFFFF;
        width: 32px;
        height: 32px;
    }
}
*/

.header-content {

    // Link list of available pages
    .pages {
        text-align: right;
        margin-top: 45px;
        
        position: absolute;
        bottom: 3px;
        right: 0;

        h1 {
            font-size: 2.5em;
            padding: 7px 14px;
            font-weight: 600;
        }

        a {
            text-decoration: none;
            color: #E6E6E6;
            display: block;

            padding: 5px 14px;

            &:last-child {
                padding-bottom: 0;
            }
        }

        img {
            width: 36px;
            height: 36px;
            margin-left: 14px;
        }
    }

    // Summary of the current page 
    .current-page {
        float: left;
        margin-top: 45px;

        h1 {
            font-size: 2.5em;
            padding: 7px 14px;
            font-weight: 600;
        }

        a {
            text-decoration: none;
            color: #E6E6E6;

            padding: 7px 14px;
        }

        img {
            width: 36px;
            height: 36px;
            margin-right: 14px;
            background: #FFFFFF;
        }
    }

    // Profile form (when we're already logged in)
    .profile {
        float: left;
        margin-top: 42px;
        margin-left: 14px;

        h1 {
            font-size: 2.5em;
            padding: 7px 0;
            font-weight: 600;
        }

        a {
            color: #E6E6E6;
        }

    }

    // Login form
    .login {
        float: left;
        margin-top: 42px;

        h1 {
            font-size: 2.5em;
            padding: 7px 14px;
            font-weight: 600;
        }

        a {
            color: #E6E6E6;
        }

        form {
            padding-left: 14px;
        }

        /* We need to float the button to swap with the other form-toggle button. 
            This technically needs to be higher up in the DOM than the other (for the
            enter key to trigger this first) but it needs to be rendered on the right
            of the previous button(s).
        */
        .login-button {
            float: right;
        }

        .controls {
            text-align: right;
            padding-top: 0.5em;
        }

    }
}


#header h2 {
    font-size: 1.8em;
    font-weight: 400;
    display: inline-block;
    transition: all 0.25s;
    opacity: 0;
    margin-right: -50px;

    transition-delay: 0.55s;

    vertical-align: bottom;
    margin-bottom: 4px;
}

#header.open h2 {
    margin-right: 0;
    opacity: 1;
}

#mmm-hamburgers {
    width: 40px;
    height: 28px;
    position: absolute;
    bottom: 0;

    .transform(rotate(0deg));
    .transition(.2s); // ease-in-out);

    margin: 14px 15px;
    cursor: pointer;

    &:hover {
        span {
            background: #FFFFFF;
        }

        span:nth-child(1) {
            top: 0px;
        }

        span:nth-child(3) {
            top: 28px;
        }
    }

    span {
        display: block;
        position: absolute;
        height: 4px;
        width: 100%;
        background: #E6E6E6;
        border-radius: 9px;
        opacity: 1;
        left: 0;

        .transform(rotate(0deg));
        .transition(.2s);

        &:nth-child(1) {
            top: 2px;
        }

        &:nth-child(2) {
            top: 14px;
        }

        &:nth-child(3) {
            top: 26px;
        }
    }

    &.open {
        span {
            &:nth-child(1) {
                top: 18px;
                .transform(rotate(135deg));  
            }

            &:nth-child(2) {
                opacity: 0;
                left: -60px;
            }

            &:nth-child(3) {
                top: 18px;
                .transform(rotate(-135deg));
            }
        }
    }

}


#header.home-style .current-page {
    display: none;
}

#header.home-style .login {
    display: block;
}

svg#sybolt-logo {
    position: absolute;
    left: 50%;
    .transition(all 0.5s);

    // Small variant (header icon sized)
    margin-left: -30px;
    width: 60px;
    height: 60px;
    bottom: 8px;
    opacity: 0;
}

#header.home-style {
    // Resize to native 
    svg#sybolt-logo {
        width: 505px;
        height: 520px;
        margin-left: -252px;
        bottom: -210px;
        opacity: 1;
    }

    .logo {
        display: none;
    }

/*
    .ring {
        fill: #34312F !important; // TODO Remove from element.style
    }

    .sky {
        fill: #2E2C2A !important; // TODO Remove from element.style
    }

    .moon {
        fill: #34312F !important; // TODO Remove from element.style
    }
*/
}
/*
svg#sybolt-logo path.moon {
    transform-origin: 41.0% 41.5%;
    transform: rotateZ(0deg);
    
    transition-duration: 0.8s;
    transition-property: transform;
}

svg#sybolt-logo path.moon:hover {
    transform: rotateZ(360deg);
}
*/


/*
    Responsive behaviors
*/

@media (max-width: 1200px) {
    #header.home-style svg#sybolt-logo {
        width: 360px;
        height: 375px;
        margin-left: -180px;
        bottom: -140px;
        opacity: 1;
    }
}

